# ESP32

./: .gitignore  README.md
C6/Chip_manufacturer_info/ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/: sdkconfig  sdkconfig.old
C6/Chip_manufacturer_info/ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/: main.c
C6/Projects/cap_sensor/: README.md
C6/Projects/cap_sensor/PATCH/: 0001-fix-esp_adc-fixed-adc-continue-monitor-don-t-work-is.txt
C6/Projects/cap_sensor/main/: CMakeLists.txt  main.c
C6/Projects/cap_sensor/main/src/ADC/: adc.c  adc.h
C6/Projects/cap_sensor/main/src/CAP/: cap.c  cap.h
S3/Projects/hydrocare/: .gitignore  .~lock.Resources.docx#  PROTOCOL_DOCUMENTATION.md  Resources.docx  uri_master_slave_system_desc.md
S3/Projects/hydrocare/hydrocare_fw/hydroCare/: SLAVE_PROTOCOL.md  platformio.ini  spi_protocol.md
S3/Projects/hydrocare/hydrocare_fw/hydroCare/python_scripts_imageformat/: .gitignore  irimage.py  rgbimage.py  uri_bin_extracter.py
S3/Projects/hydrocare/hydrocare_fw/hydroCare/src/: UrinfoMonitor_RGB.html  main.cpp
S3/Projects/hydrocare/hydrocare_sensor/hydroCare_Sensor/: SLAVE_PROTOCOL_UPDATE.md  SPI_TEST_PATTERN_GUIDE.md  platformio.ini
S3/Projects/lcd_ble/: CMakeLists.txt  README.md
S3/Projects/lcd_xx/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
S3/Projects/lcd_xx/main/: idf_component.yml  main.c
main/: CMakeLists.txt  idf_component.yml  main.c  spi_lcd_touch_example_main.c
main/src/dptp_mng/: dptp_mng.c
main/src/touch_controller/: touch.h
main/src/ui/: ui.c
(+29 files in other folders)
